--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
          margin-right: 8px;
       }
 
-      #fr-logo {
-         display: none !important;
+/*       #fr-logo {
+         display: none !important; */
       }
    </style>
 </head>
