--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
       window.onload = () => {
          initializeEditor('classic');
       };
+   </script>
+   
    <script>
       const observer = new MutationObserver(() => {
       const wrapper = document.querySelector('.fr-wrapper');
