--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       #fr-logo {
          display: none !important;
       }
+
+      #pbf {
+         display: none !important;
+      }
    </style>
 </head>
 
