--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          display: none !important;
       }
 
-      #pbf {
+      p[data-f-id="pbf"] {
          display: none !important;
       }
    </style>
