--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       .selector-button {
          display: flex;
          align-items: center;
+         justify-content: center;
          border: 1px solid #ccc;
          padding: 8px 12px;
          margin-right: 10px;
@@ -99,8 +100,8 @@
 
          <!-- Word Download Button -->
          <button onclick="downloadAsDocx()" class="selector-button" title="Download Word">
-            <i class="fa-solid fa-file-word" style="margin-right: 5px;"></i>
-            Word
+            <i class="fa-solid fa-file-word fa-xl" style="margin: 10px 0px;"></i>
+            <!-- Word -->
          </button>
       </nav>
 
